:hammer: sonarqube fixes.